--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,22 @@
 {
-    "name": "manuel/php-mono",
-    "description": "A Fast, Powerful, and Object Oriented PHP Web Framework.",
-    "type": "project",
-    "require": {
-        "vlucas/phpdotenv": "^5.6",
-        "twig/twig": "^3.17"
-    },
-    "license": "MIT",
-    "autoload": {
-        "psr-4": {
-            "Manuel\\PhpMono\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Manuel",
-            "email": "caballeromanuel203@gmail.com"
-        }
-    ]
+  "name": "zorncbllr/php-mono",
+  "description": "A Fast, Powerful, and Object Oriented PHP Web Framework.",
+  "type": "project",
+  "require": {
+    "php": ">=8.2",
+    "vlucas/phpdotenv": "^5.6",
+    "twig/twig": "^3.17"
+  },
+  "license": "MIT",
+  "autoload": {
+    "psr-4": {
+      "Manuel\\PhpMono\\": "src/"
+    }
+  },
+  "authors": [
+    {
+      "name": "Manuel",
+      "email": "caballeromanuel203@gmail.com"
+    }
+  ]
 }
