--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "vlucas/phpdotenv": "^5.6",
     "twig/twig": "^3.17"
   },
+  "version": "0.1.8",
   "license": "MIT",
   "autoload": {
     "psr-4": {
