--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "vlucas/phpdotenv": "^5.6",
     "twig/twig": "^3.17"
   },
-  "version": "2.8.4",
+  "minimum-stability": "beta",
+  "version": "0.0.2",
   "license": "MIT",
   "autoload": {
     "psr-4": {
