--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,8 @@
     "vlucas/phpdotenv": "^5.6",
     "twig/twig": "^3.17"
   },
-  "minimum-stability": "stable",
-  "prefer-stable": true,
+  "minimum-stability": "dev",
+  "prefer-stable": false,
   "version": "0.0.2",
   "license": "MIT",
   "autoload": {
