--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DATABASE_HOST=localhost
 DATABASE_PORT=3306
-DATABASE_NAME=mono_db
+DATABASE_NAME=
 DATABASE_USER=root
 DATABASE_PASSWORD=
 DATABASE_CHARSET=utf8mb4
