--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
   "type": "project",
   "require": {
     "php": ">=8.1.0",
-    "vlucas/phpdotenv": "^5.6",
-    "twig/twig": "^3.17"
+    "vlucas/phpdotenv": "^5.6"
   },
   "minimum-stability": "dev",
   "prefer-stable": false,
