--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "autoload": {
     "psr-4": {
-      "Manuel\\PhpMono\\": "src/"
+      "Src\\": "src/"
     }
   },
   "scripts": {
