--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.0.15",
     "tailwindcss": "^4.0.15"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
   }
 }
